package jobs4u.core.jobopeningmanagement.domain;

/**
 * The enum Phase type.
 */
public enum PhaseType {
    /**
     * Application phase type.
     */
    APPLICATION,
    /**
     * Screening phase type.
     */
    SCREENING,
    /**
     * Interviews phase type.
     */
    INTERVIEWS,
    /**
     * Analysis phase type.
     */
    ANALYSIS,
    /**
     * Result phase type.
     */
    RESULT
}