/*
 * Copyright (c) 2013-2024 the original author or authors.
 *
 * MIT License
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */
package jobs4u.core.usermanagement.domain;

import jobs4u.core.clientusermanagement.domain.SignupRequestBuilder;
import eapli.framework.infrastructure.authz.domain.model.PlainTextEncoder;
import eapli.framework.infrastructure.authz.domain.model.SystemUserBuilder;
import eapli.framework.util.Utility;
import jobs4u.core.clientusermanagement.domain.SignupRequestBuilder;

/**
 * The type User builder helper.
 *
 * @author Paulo Gandra de Sousa 27/05/2019
 */
@Utility
public class UserBuilderHelper {
    private UserBuilderHelper() {
        // ensure utility
    }

    /**
     * Builder system user builder.
     *
     * @return the system user builder
     */
    public static SystemUserBuilder builder() {
        return new SystemUserBuilder(new BasePasswordPolicy(), new PlainTextEncoder());
    }

    /**
     * Signup builder signup request builder.
     *
     * @return the signup request builder
     */
    public static SignupRequestBuilder signupBuilder() {
        return new SignupRequestBuilder(new BasePasswordPolicy(), new PlainTextEncoder());
    }
}
